2017-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/init.c (R_init_RcppMLPACK): all R_registerRoutines()
	and R_useDynamicSymbols()
	* NAMESPACE: Use .registration=TRUE on useDynLib

	* src/linearRegression.cpp (linearRegression): New (and very
	simple) OLS (and Ridge) example function
	* man/man/linearRegression.Rd: Documentation

2017-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/LARS.cpp (LARS): Beginnings of LARS function
	* man/LARS.Rd: Beginnings of documentation

	* .editorconfig: Added to support EditorConfig

2017-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Updated

2017-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/kmeans.cpp: Added documentation and example
	* man/kmeans.Rd: Ditto

2017-02-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/coverTreeNeighbor.cpp: Added documentation and example
	* man/coverTreeNeighbor.Rd: Ditto
	* NAMESPACE: Exported coverTreeNeighbor

	* data/testData1kBy3.RData: New data set
	* rawdata/test_data_3_1000.csv: New raw data
	* rawdata/test_data_1k_by_3.r: New data converter

2017-02-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/logisticRegression.cpp: Added documentation and example
	* man/naiveBayesClassifier.Rd: Ditto
	* NAMESPACE: Exported logisticRegression

2017-02-23  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Note issue with RStudio IDE

	* src/naiveBayesClassifier.cpp: Added examples
	* man/naiveBayesClassifier.Rd: Ditto

2017-02-22  Dirk Eddelbuettel  <edd@debian.org>

	* data/trainSet.RData: Reorganised data as single file

2017-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* R/data.R: Documentation for four included data sets from mlpack
	* man/testRes.Rd: Test result data
	* man/testSet.Rd: Test set data
	* man/trainRes.Rd: Train result data
	* man/trainSet.Rd: Train set data

2017-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Several edits and updates

	* DESCRIPTION: Idem

	* rcppmlpack2.Proj: Added for RStudio use
	* .gitignore: Updated for RStudio files
