@@ -1,3 +1,9 @@
+2018-02-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/init.c: Removed, now auto-generated in RcppExports.cpp
+	* src/RcppExports.cpp: Regenerated
+	* R/RcppExports.R: Idem
+
 2017-05-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/init.c (R_init_RcppMLPACK): all R_registerRoutines()
